<resources>
    <string name="app_name">Aprende Mates</string>
    <string name="boton_empezar">EMPEZAR</string>
    <string name="hint_text">Nombre</string>
    <string name="facil">FÁCIL</string>
    <string name="medio">MEDIO</string>
    <string name="dificil">DIFÍCIL</string>
    <string name="vidas">VIDAS</string>
    <string name="puntuacion">PUNTUACIÓN: </string>
    <string name="comprobar">COMPROBAR</string>
    <string name="resultado">Resultado</string>
    <string name="perdido">HAS PERDIDO :(</string>
    <string name="reset">VOLVER A JUGAR</string>
    <string name="salir">SALIR</string>
    <string name="has">HAS </string>
    <string name="subir_nivel_y">SUBIDO DE NIVEL Y </string>
    <string name="subir_multiplicador">CONSEGUIDO MULTIPLICADOR DE RACHA</string>
    <string name="info_facil_titulo">
        FÁCIL:</string>
    <string name="info_facil">
        Solo sumas, si consigues suficientes puntos puedes subir de nivel y conseguir un multiplicador.
        </string>
    <string name="info_medio_titulo">MEDIO:</string>
    <string name="info_medio">
        Sumas y restas, si consigues suficientes puntos tambien puedes subir de nivel y conseguir un multiplicador.
        </string>
    <string name="info_dificil_titulo">DIFÍCIL:</string>
    <string name="info_dificil">
        Sumas, restas y multiplicaciones, si consigues suficientes puntos puedes conseguir un multiplicador.
    </string>
    <string name="ranking" translatable="false">RANKING:</string>
    <string name="default_name">Jugador</string>
</resources>