<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portrait_bg"
    tools:context=".Game">

    <ImageView
        android:id="@+id/imgNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/verde_marron"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgNum2"
        app:layout_constraintEnd_toStartOf="@+id/imgNum2"
        app:layout_constraintStart_toEndOf="@+id/imgNum1"
        app:layout_constraintTop_toTopOf="@+id/imgNum1" />

    <Button
        android:id="@+id/btComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprobar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/edTxtNum"
        android:layout_width="127dp"
        android:layout_height="0dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/resultado"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/btComprobar"
        app:layout_constraintEnd_toStartOf="@+id/btComprobar"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btComprobar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtPuntos"
        style="@style/txtGame"
        android:text="@string/puntuacion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imgNum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/txtVidas"
        style="@style/txtGame"
        android:text="@string/vidas"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imgNum1"
        app:layout_constraintEnd_toEndOf="@+id/txtPuntos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtPuntos"
        app:layout_constraintTop_toBottomOf="@+id/txtPuntos"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imgVidas"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/txtVidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/txtVidas"
        app:layout_constraintTop_toTopOf="@+id/txtVidas"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtScore"
        style="@style/txtGame"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtPuntos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPuntos"
        app:layout_constraintTop_toTopOf="@+id/txtPuntos" />

    <TextView
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/verde_marron"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgNum1"
        app:layout_constraintStart_toStartOf="@+id/imgNum1"
        app:layout_constraintTop_toBottomOf="@+id/imgNum1"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/verde_marron"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgNum2"
        app:layout_constraintStart_toStartOf="@+id/imgNum2"
        app:layout_constraintTop_toBottomOf="@+id/imgNum2"
        app:layout_constraintVertical_bias="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>